--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <div class='header'><h1>Home</h1></div>
 <div class='search-view'>
 <input class='search-key' type="text"/>
+<input type="submit">
 <ul class='employee-list'></ul>
 </div>
 
